# flagship_converter

./: .gitattributes  .gitignore  FlagshipConverter.spec  LICENSE  README.md  build.py  pyproject.toml  release.py
docs/superpowers/plans/: 2026-07-19-github-release.md
docs/superpowers/specs/: 2026-07-19-github-release-design.md
packaging/: installer.iss
src/flagship_converter/: __init__.py  app.py  i18n.py  version.py
src/flagship_converter/core/: engine.py  expand.py  models.py  update_checker.py
src/flagship_converter/core/converters/: audio.py  base.py  document.py  image.py  media.py  pdf_docx.py  video.py
src/flagship_converter/ui/: main_window.py  presets.py  settings.py  theme.py  video_codecs.py  workers.py
src/flagship_converter/ui/pages/: converter_page.py  presets_page.py  settings_page.py
src/flagship_converter/ui/widgets/: command_bar.py  drop_overlay.py  drop_zone.py  file_card.py  file_row.py  job_item.py  task_queue.py
tests/: conftest.py  test_command_bar.py  test_converter_page.py  test_drop_overlay.py  test_engine_workers.py  test_expand.py  test_file_row.py  test_i18n.py  test_image_formats.py  test_main_window.py  test_media.py  test_pdf_docx.py  test_presets.py  test_presets_page.py  test_release.py  test_settings.py  test_settings_page.py  test_smoke.py  test_task_queue.py  test_theme.py  test_update_checker.py  test_version.py  test_video_codecs.py  test_video_targets.py
