[project]
name = "flagship-file-converter"
version = "0.1.0"
description = "Flagship local file converter — privacy-first, desktop-grade UX"
requires-python = ">=3.12"
dependencies = [
    "PySide6>=6.7.0",
    "Pillow>=11.0.0",
    "docling>=2.74.0",
    "python-docx>=1.2.0",
    "markdown>=3.10.2",
    "pdfkit>=1.0.0",
    "pyinstaller>=6.19.0",
    "pdf2docx>=0.5.13",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]

[tool.uv]
# pdf2docx pulls opencv-python-headless, which clobbers the cv2 package
# already provided by opencv-python (required by rapidocr). Only one OpenCV
# distribution may be installed; drop the headless one.
override-dependencies = [
    "opencv-python-headless ; sys_platform == 'never'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/flagship_converter"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
